# teefetch

./: .gitignore  README.md  flake.nix
contracts/: foundry.toml
contracts/script/deploy/: Teefetch.s.sol
contracts/src/: Teefetch.sol
enclave/: default.nix  flake.nix  supervisord.conf
sdk/: Cargo.toml
sdk/examples/: ethprice.rs  example.rs
sdk/src/: client.rs  lib.rs  response.rs
server/: Cargo.toml  default.nix  flake.nix
server/src/: main.rs
