[package]
name = "sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
clap = "4.1.10"
hex = "0.4.3"
k256 = { version = "0.13.2", features = ["ecdsa", "ecdsa-core"] }
oyster-sdk = "0.8.3"
reqwest = "0.11"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0"
tokio = "1.39.0"

[lib]
name = "oyster_https"

[[example]]
name = "ethprice"
path = "examples/ethprice.rs"
