[package]
name = "sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.6.2", features = ["sol-types"] }
anyhow = "1.0.81"
clap = "4.1.10"
k256 = { version = "0.13.2", features = ["ecdsa", "ecdsa-core"] }
oyster-sdk = "0.8.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0"
tokio = "1.39.0"

[lib]
name = "oyster_https"

[[example]]
name = "example"
path = "examples/example.rs"
