[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.6.2", features = ["sol-types"] }
anyhow = "1.0.93"
axum = "0.7.7"
k256 = { version = "0.13.4", features = ["alloc", "ecdsa-core"] }
reqwest = "0.12.9"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
